# 2023

./: .gitignore  Bathroom.h  Bedroom.h  CMakeCache.txt  CMakeLists.txt  Device.cpp  Device.h  FileRepo.cpp  FileRepo.h  Heat.h  House.h  Kitchen.h  Makefile  Pressure.h  PrintHouse.h  Product.cpp  Refrigerator.h  Room.cpp  Room.h  Sensor.cpp  Sensor.h  SmartHomeManager.cpp  SmartHomeManager.h  TV.h  Ultrasonic.h  User.h  Vacuum.h  app.cpp  cmake_install.cmake  data.xml  device.cpp  device.h  example.xml  house_data.txt  input.xml  main  main.cc  main.cpp  pugiconfig.hpp  room.cpp  (+10 more)
Devices/: acunit.cpp  acunit.h  device.h  devicestatus.h  door.cpp  door.h  lightbulb.cpp  lightbulb.h
Homework3/: CMakeCache.txt  CMakeLists.txt  Includes.h  Makefile  cmake_install.cmake  file1.cpp  file2.cpp  file3.cpp  homework3
Sensors/: humiditysensor.cpp  humiditysensor.h  lightsensor.cpp  lightsensor.h  presencesensor.cpp  sensor.cpp  (+4 more)
smart_home/: CMakeLists.txt
smart_home/include/devices/: ac_unit.h  device.h  fan.h  light_bulb.h
smart_home/include/rooms/: bedroom.h  living_room.h  room.h
smart_home/include/sensors/: light_sensor.h  presence_sensor.h  sensor.h  temperature_sensor.h
smart_home/include/services/: service.h  status_service.h  temperature_service.h
smart_home/resources/: write_document.xml
smart_home/src/: CMakeLists.txt  main.cc
smart_home/src/devices/: ac_unit.cc  device.cc  fan.cc  light_bulb.cc
smart_home/src/sensors/: sensor.cc
smart_home/src/services/: light_service.cc  presence_service.cc  service.cc  status_service.cc  temperature_service.cc
(+60 files in other folders)
